# example_mongodb

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
mongodb/: app.py  app_api.py  main.py  users_bot.py
mongodb/templates/: add_user.html  index.html
