[tool.poetry]
name = "mongodb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.8.0"
flask = "^3.0.3"
gunicorn = "^23.0.0"

[tool.poetry.scripts]
load = "mongodb.main:main"
users = "mongodb.users_bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
